[tool.poetry]
name = "uptime"
version = "0.1.0"
description = ""
authors = ["Fischer Jemison <fischer@jeli.io>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.9.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
